fix: alignment of testimonial title and content in testimonial page in media query Iphone 6/7/8 landscape

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -990,17 +990,21 @@ input[type=reset]{
   }
   .test_title{
     color: black;
-    margin-left: 70px;
-    margin-left: 30px; /* !important;*/
+  
+    margin-left: 20px !important;
   }
 
   .star-wrapper-pos{
     display: none;
   }
   .review_container_pos{
-    width: 550px;  /*!important;*/
-    margin-left: 10px; /*!important;*/
+    /*width: 550px;  /*!important;*/
+
+    width: 600px !important;
+
+    margin-left: 0px !important;
   }
+
   .testpic{
     display: none;
 
@@ -1009,6 +1013,7 @@ input[type=reset]{
     max-width: 50%; /*!important;*/
     float: left;
     margin-left: 40px;
+    
   }
   .basepic img {
     float: right;
